--- a/src/style/general.css
+++ b/src/style/general.css
@@ -9,12 +9,54 @@
 a{
   text-decoration: none;
   color: inherit;
+  font-weight: bold;
+}
+
+a:hover{
+  color:#4550e6;
 }
 
 p{
   margin-bottom: 1em;
+  line-height: 1.5;
+  max-width: 33em;
 }
+
+h2{
+  font-size: 2em;
+  margin-bottom: 1em;
+}
+
+h3{
+  margin-bottom: 1em;
+}
+
 /* Structure */
+.flex{
+  display: flex;
+}
+section{
+  padding: calc(100px + 3.125%) 1.5625% 3.125%;
+}
+
+
+/* Partie Laterale */
+.mainLateral{
+  position: fixed;
+  width: 200px;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  background: #fff;
+  border: solid 1px #aaa;
+  box-shadow: 6px 0 6px rgba(0,0,0,0.25);
+  padding: 1.5625% 10px;
+  z-index: 2;
+}
+
+.logo{
+  padding: 0 0 20px 0;
+}
 
 .container{
   margin: 0 auto;
@@ -23,28 +65,140 @@ p{
 
 /* Header */
 header{
-  padding: 1.5625% 3.125%;
+  padding: 1.5625% 3.125% 1.5625% calc(200px + 3.125%);
   box-shadow: 3px 3px 3px rgba(0,0,0,0.25);
-}
-
-section{
-  padding: 3.125% 1.5625%;
-}
-h2{
-  font-size: 2em;
-  margin-bottom: 1em;
-}
-
-.flex{
-  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: #fff;
+  z-index: 1;
+  height: 90px;
 }
 
 header > .flex{
-  justify-content: space-between;
+  justify-content: flex-end;
 }
 
-.explication{
+/* Menu */
+.generalMenu{
+  display: flex;
+  height: 50px;
+}
+
+.generalMenu li{
+  margin: 0 10px;
+  list-style: none;
+  line-height: 50px;
+}
+
+/* Partie principale */
+.mainContainer{
+  padding-left: 200px;
+  position: relative;
+  z-index:0;
+}
+
+/* Section A */
+
+#SectionA .flex{
+  flex-wrap: wrap;
+}
+#SectionA .flex > div{
+  width: calc(100% * 2/3);
+}
+#SectionA .flex > div.explication{
   width: calc(100% / 3);
   padding: 0 3.125%;
   flex-shrink: 0;
+}
+
+/* Section B */
+#SectionB{
+  padding: 3.125% 1.5625% 3.125%;
+}
+
+#SectionB .flex div{
+  width: calc(100% / 3);
+  padding: 0 3.125%;
+}
+
+/* Footer */
+
+footer{
+  padding-left: 200px;
+}
+footer nav{
+  padding: 3.125%;
+  color: #fff;
+  background-color: #444;
+}
+footer nav div{
+  color: #fff;
+  padding: 0 3.125%;
+}
+
+footer nav *{
+  color: #fff;
+}
+.coloneA{
+  text-align: center;
+}
+.coloneB, .coloneB h3, .coloneB li{
+  color: #fff;
+}
+
+footer nav a{
+  font-weight: normal;
+  color:#ddd;
+}
+footer nav a:hover{
+  color: #fff;
+  font-weight: bold;
+}
+footer nav li{
+  list-style: none;
+  margin: 0 0 5px;
+}
+.mentionLegales{
+  background: #222;
+  color: #fff;
+  text-align: left;
+  padding: 1.5625% 3.125%;
+}
+
+@media screen and (max-width: 960px){
+  #SectionA .flex > div{
+    width: 100%;
+  }
+  #SectionA .flex > div.explication{
+    width: calc(100% * 2/3);
+  }
+}
+
+@media screen and (max-width: 640px){
+  .mainLateral{
+    width: 80px;
+  }
+  .mainLateral .logo img{
+    width: 100%;
+    max-width: 100px;
+  }
+  .mainContainer{
+    padding-left: calc(80px + 3.125%);
+  }
+
+  /*Section B*/
+
+  #SectionB .flex{
+    flex-direction: column;
+  }
+
+  #SectionB .flex div{
+    width: 100%;
+    margin-bottom: 3.125%;
+  }
+  footer {
+    padding-left: 80px;
+}
 }
